--- a/templates/main.html
+++ b/templates/main.html
@@ -30,7 +30,7 @@
     <script src="/static/js/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/static/css/index.min.css?1256742">
+    <link rel="stylesheet" type="text/css" href="/static/css/index.min.css?139142">
     <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -248,8 +248,8 @@
     <script src="/static/vue_modules/vue.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue_modules/vue-axios-plugin.min.js" onload="scrptloadchk += 1;"></script>
     <script src="/static/vue_modules/vue-timeago.min.js" onload="scrptloadchk += 1;"></script>
-    <script src="/static/vue/mixins/generalMixins.min.js?12656742" onload="scrptloadchk += 1;"></script>
-    <script src="/static/vue/pages/index.min.js?12656742" onload="scrptloadchk += 1;"></script>
+    <script src="/static/vue/mixins/generalMixins.min.js?13656742" onload="scrptloadchk += 1;"></script>
+    <script src="/static/vue/pages/index.min.js?17642" onload="scrptloadchk += 1;"></script>
     <script src="https://unpkg.com/element-ui/lib/index.js" onload="scrptloadchk += 1;"></script>
     <script>
         setTimeout(CheckLoadScript, 1000);
